--- a/contact.html
+++ b/contact.html
@@ -2,40 +2,42 @@
 
 <html>
 
-  <head>
-    <meta name="description" content="Lilla Pulay - Portfolio">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-    <link rel="shortcut icon" href="img/favicon.ico">
-    <title> Contact me</title>
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-  </head>
+<head>
+  <meta name="description" content="Lilla Pulay - Portfolio">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <title> Contact me</title>
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+</head>
 
-  <body>
+<body>
 
-    <header class="page-header">
-      <a href="index.html"><img src="img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay" class="page-header__item"></a>
-      <nav class="main-navigation page-header__item">
-        <ul role="menubar" class="navigation-list">
-          <li role="presentation">
-            <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
-          </li>
-          <li role="presentation">
-            <a href="about.html" role="menuitem" class="navigation-list__item">About Me</a>
-          </li>
-          <li role="presentation">
-            <a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
-          </li>
-          <li role="presentation">
-            <a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Contact</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+  <header class="page-header">
+    <a href="index.html"><img src="img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay"
+        class="page-header__item"></a>
+    <nav class="main-navigation page-header__item">
+      <ul role="menubar" class="navigation-list">
+        <li role="presentation">
+          <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
+        </li>
+        <li role="presentation">
+          <a href="about.html" role="menuitem" class="navigation-list__item">About</a>
+        </li>
+        <li role="presentation">
+          <a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
+        </li>
+        <li role="presentation">
+          <a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Contact</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-<!-- Hiding contact form for now
+  <!-- Hiding contact form for now - contact details on the left, form on the right
     <div class="contact-form">
       <h1>Send me a message</h1>
       <form action="#" method="post" id="contact-form">
@@ -55,29 +57,29 @@
     </div>
   -->
 
-    <div class="contact-details">
-      <h1>Contact details</h1>
-      <p>
+  <div class="contact-details">
+    <h1>Contact details</h1>
+    <p>
       Location: Lelystad, Netherlands <br>
       <br>
       Email: <a href="mailto:pulaylilla@gmail.com">pulaylilla@gmail.com</a><br>
       Phone: <a href="tel:+31622022917" aria-label="phone number +3 1. 6 2. 2 0 2. 2 9. 1 7.">+31 62 202 29 17</a><br>
       Skype: <a href="skype:pulaylilla_1">pulaylilla_1</a><br>
-      </p>
+    </p>
+  </div>
+
+  <footer class="page-footer">
+    <div class="page-footer__item">
+      <a href="https://github.com/lillapulay" target="_blank"><img src="img/github_icon.svg" alt="github"
+          title="GitHub"></a>
+      <a href="https://twitter.com/lillapulay" target="_blank"><img src="img/twitter_icon.svg" alt="twitter"
+          title="Twitter"></a>
+      <a href="https://www.linkedin.com/in/lilla-pulay-84585a15a/" target="_blank"><img src="img/linkedin_icon.svg"
+          alt="linkedin" title="LinkedIn"></a>
     </div>
+  </footer>
+  <script src="js/tota11y.min.js"></script>
 
-    <footer class="page-footer">
-      <p>
-        <span class="page-footer">Find me on</span>
-      </p>
-      <div class="social-media">
-        <a href="https://github.com/lillapulay" target="_blank"><img src="img/github_icon.svg" alt="github" title="GitHub"></a>
-        <a href="https://twitter.com/lillapulay" target="_blank"><img src="img/twitter_icon.svg" alt="twitter" title="Twitter"></a>
-        <a href="https://www.linkedin.com/in/lilla-pulay-84585a15a/" target="_blank"><img src="img/linkedin_icon.svg" alt="linkedin" title="LinkedIn"></a>
-      </div>
-    </footer>
-    <script src="js/tota11y.min.js"></script>
-
-  </body>
+</body>
 
 </html>
