--- a/projects/ToDoApp.html
+++ b/projects/ToDoApp.html
@@ -1,74 +1,76 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta name="description" content="Lilla Pulay - Portfolio">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-    <link rel="shortcut icon" href="../img/favicon.ico">
-    <title> To-Do App </title>
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" type="text/css" href="../css/styles.css">
-  </head>
+<head>
+  <meta name="description" content="Lilla Pulay - Portfolio">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <link rel="shortcut icon" href="../img/favicon.ico">
+  <title> To-Do App </title>
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="../css/styles.css">
+</head>
 
-  <body>
+<body>
 
-    <header class="page-header">
-      <a href="../index.html"><img src="../img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay" class="page-header__item"></a>
-      <nav class="main-navigation page-header__item">
-        <ul role="menubar" class="navigation-list">
-          <li role="presentation">
-            <a href="../index.html" role="menuitem" class="navigation-list__item">Home</a>
-          </li>
-          <li role="presentation">
-            <a href="../about.html" role="menuitem" class="navigation-list__item">About Me</a>
-          </li>
-          <li role="presentation">
-            <a href="../work.html" role="menuitem" class="navigation-list__item">Work</a>
-          </li>
-          <li role="presentation">
-            <a href="../contact.html" role="menuitem" class="navigation-list__item">Contact</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+  <header class="page-header">
+    <a href="../index.html"><img src="../img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay"
+        class="page-header__item"></a>
+    <nav class="main-navigation page-header__item">
+      <ul role="menubar" class="navigation-list">
+        <li role="presentation">
+          <a href="../index.html" role="menuitem" class="navigation-list__item">Home</a>
+        </li>
+        <li role="presentation">
+          <a href="../about.html" role="menuitem" class="navigation-list__item">About Me</a>
+        </li>
+        <li role="presentation">
+          <a href="../work.html" role="menuitem" class="navigation-list__item">Work</a>
+        </li>
+        <li role="presentation">
+          <a href="../contact.html" role="menuitem" class="navigation-list__item">Contact</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-    <section class="project">
-      <h1>To-Do App</h1>
-      <div class="project-description">
-        <img src="../img/todo.PNG" class="project__picture" alt="Screenshot of the app">
-        <h2>Description</h2>
-        <p>
-          Basic to-do app created with Vue.js.
-          This project was part of the CF Full-Stack Web Development course.
-        </p>
-        <div>
-          <a href="https://lillapulay.github.io/To-Do-App/" target="_blank">See website</a><br>
-          <a href="https://github.com/lillapulay/To-Do-App" target="_blank">See code on GitHub</a>
-        </div>
-        <h2>Planned updates</h2>
-        <ul>
-          <li>drag-and-drop function</li>
-          <li>local storage</li>
-          <li>UI updates (e.g. improvements regarding checkboxes and button placement)</li>
-        </ul>
-      </div>
-      <a href="../work.html"> Back to all projects </a>
-    </section>
-
-    <footer class="page-footer">
+  <section class="project">
+    <h1>To-Do App</h1>
+    <div class="project-description">
+      <img src="../img/todo.PNG" class="project__picture" alt="Screenshot of the app">
+      <h2>Description</h2>
       <p>
-        <span class="page-footer">Find me on</span>
+        Basic to-do app created with Vue.js.
+        This project was part of the CF Full-Stack Web Development course.
       </p>
-      <div class="social-media">
-        <a href="https://github.com/lillapulay" target="_blank"><img src="../img/github_icon.svg" alt="github" title="GitHub"></a>
-        <a href="https://twitter.com/lillapulay" target="_blank"><img src="../img/twitter_icon.svg" alt="twitter" title="Twitter"></a>
-        <a href="https://www.linkedin.com/in/lilla-pulay-84585a15a/" target="_blank"><img src="../img/linkedin_icon.svg" alt="linkedin" title="LinkedIn"></a>
+      <div>
+        <a href="https://lillapulay.github.io/To-Do-App/" target="_blank">See website</a><br>
+        <a href="https://github.com/lillapulay/To-Do-App" target="_blank">See code on GitHub</a>
       </div>
-    </footer>
-    <script src="../js/tota11y.min.js"></script>
+      <h2>Planned updates</h2>
+      <ul>
+        <li>drag-and-drop function</li>
+        <li>local storage</li>
+        <li>UI updates (e.g. improvements regarding checkboxes and button placement)</li>
+      </ul>
+    </div>
+    <a href="../work.html"> Back to all projects </a>
+  </section>
 
-  </body>
+  <footer class="page-footer">
+    <div class="page-footer__item">
+      <a href="https://github.com/lillapulay" target="_blank"><img src="../img/github_icon.svg" alt="github"
+          title="GitHub"></a>
+      <a href="https://twitter.com/lillapulay" target="_blank"><img src="../img/twitter_icon.svg" alt="twitter"
+          title="Twitter"></a>
+      <a href="https://www.linkedin.com/in/lilla-pulay-84585a15a/" target="_blank"><img src="../img/linkedin_icon.svg"
+          alt="linkedin" title="LinkedIn"></a>
+    </div>
+  </footer>
+  <script src="../js/tota11y.min.js"></script>
+
+</body>
 
 </html>
