--- a/projects/myFlix.html
+++ b/projects/myFlix.html
@@ -85,10 +85,7 @@
   </section>
 
   <footer class="page-footer">
-    <p>
-      <span class="page-footer">Find me on</span>
-    </p>
-    <div class="social-media">
+    <div class="page-footer__item">
       <a href="https://github.com/lillapulay" target="_blank"><img src="../img/github_icon.svg" alt="github"
           title="GitHub"></a>
       <a href="https://twitter.com/lillapulay" target="_blank"><img src="../img/twitter_icon.svg" alt="twitter"
