--- a/work.html
+++ b/work.html
@@ -2,112 +2,112 @@
 
 <html>
 
-  <head>
-    <meta name="description" content="Lilla Pulay - Portfolio">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-    <link rel="shortcut icon" href="img/favicon.ico">
-    <title> Work </title>
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-  </head>
+<head>
+  <meta name="description" content="Lilla Pulay - Portfolio">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <title> Work </title>
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+</head>
 
-  <body>
+<body>
 
-    <header class="page-header">
-      <a href="index.html"><img src="img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay" class="page-header__item"></a>
-      <nav class="main-navigation page-header__item">
-        <ul role="menubar" class="navigation-list">
-          <li role="presentation">
-            <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
-          </li>
-          <li role="presentation">
-            <a href="about.html" role="menuitem" class="navigation-list__item">About Me</a>
-          </li>
-          <li role="presentation">
-            <a href="work.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Work</a>
-          </li>
-          <li role="presentation">
-            <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+  <header class="page-header">
+    <a href="index.html"><img src="img/lilla-pulay-logo.png" alt="Personal logo of Lilla Pulay"
+        class="page-header__item"></a>
+    <nav class="main-navigation page-header__item">
+      <ul role="menubar" class="navigation-list">
+        <li role="presentation">
+          <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
+        </li>
+        <li role="presentation">
+          <a href="about.html" role="menuitem" class="navigation-list__item">About</a>
+        </li>
+        <li role="presentation">
+          <a href="work.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Work</a>
+        </li>
+        <li role="presentation">
+          <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-    <section class="work">
-      <h1>Work</h1>
-      <div class="grid">
+  <section class="work">
+    <h1>Projects</h1>
+    <div class="grid">
 
-        <div class="grid__item">
-          <h3>Javascript Pokedex</h3>
-          <p>
-            Pokedex created with vanilla Javascript.
-          </p>
-          <a href="projects/JavaScriptPokedex.html">Read more</a> <br>
-          <a href="https://lillapulay.github.io/pokedex-javascript/" target="_blank">See website</a><br>
-          <a href="https://github.com/lillapulay/pokedex-javascript" target="_blank">See code on GitHub</a>
-        </div>
-
-        <div class="grid__item">
-          <h3>Pokedex 2.0</h3>
-          <p>
-            The Pokedex app upgraded with jQuery and Bootstrap.
-          </p>
-          <a href="projects/jQueryPokedex.html">Read more</a> <br>
-          <a href="https://lillapulay.github.io/jquery-pokedex/" target="_blank">See website</a><br>
-          <a href="https://github.com/lillapulay/jquery-pokedex" target="_blank">See code on GitHub</a>
-        </div>
-
-        <div class="grid__item">
-          <h3>myFlix</h3>
-          <p>
-            Movie app consisting of a movie database and client-side.
-          </p>
-          <a href="projects/myFlix.html">Read more</a> <br>
-          <a href="https://mymovieapi2020.herokuapp.com/client/" target="_blank">See website</a><br>
-          <a href="https://github.com/lillapulay/movie_API" target="_blank">See code on GitHub</a>
-        </div>
-
-        <div class="grid__item">
-          <h3>MyAwesomeQuizApp</h3>
-          <p>
-            Simple quiz app created with Angular.
-          </p>
-          <a href="projects/MyAwesomeQuizApp.html">Read more</a> <br>
-          <a href="https://lillapulay.github.io/my-awesome-quiz-app/" target="_blank">See website</a><br>
-          <a href="https://github.com/lillapulay/my-awesome-quiz-app" target="_blank">See code on GitHub</a>
-        </div>
-
-        <div class="grid__item">
-          <h3>To-Do App</h3>
-          <p>
-            Basic to-do app built with Vue.js.
-          </p>
-          <a href="projects/ToDoApp.html">Read more</a> <br>
-          <a href="https://lillapulay.github.io/To-Do-App/" target="_blank">See website</a><br>
-          <a href="https://github.com/lillapulay/To-Do-App" target="_blank">See code on GitHub</a>
-        </div>
-
-        <div class="grid__item">
-          <h3>Check back later for more projects!</h3>
-        </div>
-        
+      <div class="grid__item">
+        <h3>Javascript Pokedex</h3>
+        <p>
+          Pokedex created with vanilla Javascript.
+        </p>
+        <a href="projects/JavaScriptPokedex.html">View details</a> <br>
       </div>
-    </section>
 
-    <footer class="page-footer">
-      <p>
-        <span class="page-footer">Find me on</span>
-      </p>
-      <div class="social-media">
-        <a href="https://github.com/lillapulay" target="_blank"><img src="img/github_icon.svg" alt="github" title="GitHub"></a>
-        <a href="https://twitter.com/lillapulay" target="_blank"><img src="img/twitter_icon.svg" alt="twitter" title="Twitter"></a>
-        <a href="https://www.linkedin.com/in/lilla-pulay-84585a15a/" target="_blank"><img src="img/linkedin_icon.svg" alt="linkedin" title="LinkedIn"></a>
+      <div class="grid__item">
+        <h3>Pokedex 2.0</h3>
+        <p>
+          The Pokedex app upgraded with jQuery and Bootstrap.
+        </p>
+        <a href="projects/jQueryPokedex.html">View details</a> <br>
       </div>
-    </footer>
-    <script src="js/tota11y.min.js"></script>
 
-  </body>
+      <div class="grid__item">
+        <h3>myFlix</h3>
+        <p>
+          Movie app consisting of a database and client-side.
+        </p>
+        <a href="projects/myFlix.html">View details</a> <br>
+      </div>
+
+      <div class="grid__item">
+        <h3>MyAwesomeQuizApp</h3>
+        <p>
+          Simple quiz app created with Angular.
+        </p>
+        <a href="projects/MyAwesomeQuizApp.html">View details</a> <br>
+      </div>
+
+      <div class="grid__item">
+        <h3>To-Do App</h3>
+        <p>
+          Basic to-do app built with Vue.js.
+        </p>
+        <a href="projects/ToDoApp.html">View details</a> <br>
+      </div>
+
+      <div class="grid__item">
+        <h3>MeetUp App</h3>
+        <p>
+          App using the Meetup API.
+        </p>
+        <a href="projects/MeetupApp.html">View details</a> <br>
+      </div>
+
+      <div class="grid__item">
+        <h3>Check back later for more projects!</h3>
+      </div>
+
+    </div>
+  </section>
+
+  <footer class="page-footer">
+    <div class="page-footer__item">
+      <a href="https://github.com/lillapulay" target="_blank"><img src="img/github_icon.svg" alt="github"
+          title="GitHub"></a>
+      <a href="https://twitter.com/lillapulay" target="_blank"><img src="img/twitter_icon.svg" alt="twitter"
+          title="Twitter"></a>
+      <a href="https://www.linkedin.com/in/lilla-pulay-84585a15a/" target="_blank"><img src="img/linkedin_icon.svg"
+          alt="linkedin" title="LinkedIn"></a>
+    </div>
+  </footer>
+  <script src="js/tota11y.min.js"></script>
+
+</body>
 
 </html>
